add anomaly detection
