# gala-spider/spider/models/__init__.py
@@ -3,6 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from spider.models.anomalyinfo import AnomalyInfo
 from spider.models.attr import Attr
 from spider.models.base_response import BaseResponse
 from spider.models.call import Call
