# gala-spider/spider/models/entity.py
@@ -5,6 +5,7 @@ from datetime import date, datetime  # noqa: F401
 
 from typing import List, Dict  # noqa: F401
 
+from spider.models.anomalyinfo import AnomalyInfo
 from spider.models.base_model_ import Model
 from spider.models.dependenceitem import Dependenceitem
 from spider.models.attr import Attr
@@ -17,7 +18,7 @@ class Entity(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, entityid: str=None, type: str=None, name: str=None, dependingitems: List[Dependenceitem]=None, dependeditems: List[Dependenceitem]=None, attrs: List[Attr]=None):  # noqa: E501
+    def __init__(self, entityid: str=None, type: str=None, name: str=None, dependingitems: List[Dependenceitem]=None, dependeditems: List[Dependenceitem]=None, attrs: List[Attr]=None, anomaly_infos: List[AnomalyInfo]=None, status: int=None):  # noqa: E501
         """Entity - a model defined in Swagger
 
         :param entityid: The entityid of this Entity.  # noqa: E501
@@ -32,6 +33,10 @@ class Entity(Model):
         :type dependeditems: List[Dependenceitem]
         :param attrs: The attrs of this Entity.  # noqa: E501
         :type attrs: List[Attr]
+        :param anomaly_infos: The anomaly_infos of this Entity.  # noqa: E501
+        :type anomaly_infos: List[ANOMALYINFO]
+        :param status: The status of this Entity.  # noqa: E501
+        :type status: int
         """
         self.swagger_types = {
             'entityid': str,
@@ -39,7 +44,9 @@ class Entity(Model):
             'name': str,
             'dependingitems': List[Dependenceitem],
             'dependeditems': List[Dependenceitem],
-            'attrs': List[Attr]
+            'attrs': List[Attr],
+            'anomaly_infos': List[AnomalyInfo],
+			'status': int
         }
 
         self.attribute_map = {
@@ -48,7 +55,9 @@ class Entity(Model):
             'name': 'name',
             'dependingitems': 'dependingitems',
             'dependeditems': 'dependeditems',
-            'attrs': 'attrs'
+            'attrs': 'attrs',
+            'anomaly_infos': 'anomaly_infos',
+            'status': 'status'
         }
 
         self._entityid = entityid
@@ -57,6 +66,8 @@ class Entity(Model):
         self._dependingitems = dependingitems
         self._dependeditems = dependeditems
         self._attrs = attrs
+        self._anomaly_infos = anomaly_infos
+        self._status = status
 
     @classmethod
     def from_dict(cls, dikt) -> 'Entity':
@@ -200,3 +211,45 @@ class Entity(Model):
         """
 
         self._attrs = attrs
+
+    @property
+    def anomaly_infos(self) -> List[AnomalyInfo]:
+        """Gets the anomaly_infos of this Entity.
+
+
+        :return: The anomaly_infos of this Entity.
+        :rtype: List[ANOMALYINFO]
+        """
+        return self._anomaly_infos
+
+    @anomaly_infos.setter
+    def anomaly_infos(self, anomaly_infos: List[AnomalyInfo]):
+        """Sets the anomaly_infos of this Entity.
+
+
+        :param anomaly_infos: The anomaly_infos of this Entity.
+        :type anomaly_infos: List[ANOMALYINFO]
+        """
+
+        self._anomaly_infos = anomaly_infos
+
+    @property
+    def status(self) -> int:
+        """Gets the status of this Entity.
+
+
+        :return: The status of this Entity.
+        :rtype: int
+        """
+        return self._status
+
+    @status.setter
+    def status(self, status: int):
+        """Sets the status of this Entity.
+
+
+        :param status: The status of this Entity.
+        :type status: int
+        """
+
+        self._status = status
